infra/prod-k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.carauct.click
        - api.carauct.click
        - id.carauct.click
      secretName: carauct-tls
  rules:
    - host: app.carauct.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
    - host: api.carauct.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
    - host: id.carauct.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-clusterip
                port:
                  number: 80
